--- a/tsconfig-typecheck.json
+++ b/tsconfig-typecheck.json
@@ -9,7 +9,8 @@
     "baseUrl": "./",
     "paths": {
       "ol": ["node_modules/ol/src"],
-      "ol/*": ["node_modules/ol/src/*"]
+      "ol/*": ["node_modules/ol/src/*"],
+      "@mapbox/mapbox-gl-style-spec": ["node_modules/@mapbox/mapbox-gl-style-spec/dist/index.es.js"]
     },
     "lib": [
       "es2015",
