--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,16 @@
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
+  },
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["ol-mapbox-style", "./src"],
+          ["ol-mapbox-style/dist/stylefunction", "./src"]
+        ],
+        "extensions": [".js", ".json"]
+      }
+    }
   }
 }
