--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ol-mapbox-style",
   "version": "7.1.1",
   "description": "Create OpenLayers maps from Mapbox Style objects",
-  "main": "dist/index.js",
+  "main": "dist/olms.js",
+  "module": "dist/index.js",
   "type": "module",
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
     "test": "npm run karma -- --single-run --log-level error"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-style-spec": "^13.20.1",
+    "@openlayers/mapbox-gl-style-spec": "^13.24.0-alpha.9",
     "mapbox-to-css-font": "^2.4.1",
     "webfont-matcher": "^1.1.0"
   },
