--- a/tsconfig-typecheck.json
+++ b/tsconfig-typecheck.json
@@ -5,11 +5,9 @@
     "checkJs": true,
     "target": "ES5",
     "moduleResolution": "node",
+    "module": "ESNext",
     "skipLibCheck": true,
     "baseUrl": "./",
-    "paths": {
-      "@mapbox/mapbox-gl-style-spec": ["node_modules/@mapbox/mapbox-gl-style-spec/dist/index.es.js"]
-    },
     "lib": [
       "es2015",
       "dom",
