--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start": "webpack serve --config ./webpack.config.examples.cjs",
     "prepare": "npm run doc && npm run build",
     "build": "tsc --project tsconfig-build.json && webpack-cli --mode=production --config ./webpack.config.olms.cjs && webpack-cli --mode=production --config ./webpack.config.examples.cjs",
-    "doc": "documentation readme -s API src/index.js src/stylefunction.js --document-exported true",
+    "doc": "documentation readme -s API src/index.js --document-exported true",
     "karma": "karma start test/karma.conf.cjs",
     "lint": "eslint test examples src",
     "typecheck": "tsc --project tsconfig-typecheck.json",
