--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/arcgis-rest-api": "^10.4.4",
     "@types/geojson": "^7946.0.7",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.1",
     "@types/offscreencanvas": "^2019.6.4",
     "@types/topojson-specification": "^1.0.1",
