--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "npm run karma -- --single-run --log-level error"
   },
   "dependencies": {
-    "@openlayers/mapbox-gl-style-spec": "^13.24.0-alpha.9",
+    "@mapbox/mapbox-gl-style-spec": "^13.23.1",
     "mapbox-to-css-font": "^2.4.1",
     "webfont-matcher": "^1.1.0"
   },
@@ -53,6 +53,7 @@
     "eslint-config-openlayers": "^16.0.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "html-webpack-plugin": "^5.5.0",
+    "json-strip-loader": "^1.0.5",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
@@ -62,8 +63,10 @@
     "mapbox-gl-styles": "^2.0.2",
     "mini-css-extract-plugin": "^2.4.4",
     "mocha": "^9.1.3",
+    "nanoassert": "^2.0.0",
     "ol": "^6.14.1",
     "puppeteer": "^13.0.0",
+    "remove-flow-types-loader": "^1.1.0",
     "should": "^13.2.3",
     "sinon": "^13.0.0",
     "style-loader": "^3.3.1",
