--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "ol-mapbox-style",
-  "version": "7.1.1",
+  "version": "8.0.0-beta.0",
   "description": "Create OpenLayers maps from Mapbox Style objects",
   "main": "dist/olms.js",
-  "module": "dist/index.js",
+  "module": "dist/olms.es.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "module": "./dist/olms.es.js",
+      "require": "./dist/olms.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/openlayers/ol-mapbox-style.git"
