--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -7,7 +7,8 @@
     "allowJs": true,
     "importHelpers": false,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": false,
+    "emitDeclarationOnly": true,
   },
   "include": [
     "./src/**/*.js"
