--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "webpack serve --config ./webpack.config.examples.cjs",
     "prepare": "npm run doc && npm run build",
     "build": "tsc --project tsconfig-build.json && webpack-cli --mode=production --config ./webpack.config.olms.cjs && webpack-cli --mode=production --config ./webpack.config.examples.cjs",
-    "doc": "typedoc --plugin typedoc-plugin-markdown --plugin typedoc-plugin-missing-exports src/index.js --readme none --excludeExternals --internalNamespace 'types' --tsconfig tsconfig-typecheck.json",
+    "doc": "typedoc --plugin typedoc-plugin-markdown --plugin typedoc-plugin-missing-exports src/index.js --readme none --excludeExternals --internalNamespace 'types' --name API --hideBreadcrumbs --tsconfig tsconfig-typecheck.json && npx concat-md docs --hide-anchor-links=false | npx md-insert README.md -i --region apidoc",
     "karma": "karma start test/karma.conf.cjs",
     "lint": "eslint test examples src",
     "typecheck": "tsc --project tsconfig-typecheck.json",
@@ -49,6 +49,7 @@
     "babel-loader": "^8.0.6",
     "buble": "^0.20.0",
     "buble-loader": "^0.5.1",
+    "concat-md": "^0.4.0",
     "copy-webpack-plugin": "^10.0.0",
     "coverage-istanbul-loader": "^3.0.5",
     "css-loader": "^6.5.1",
@@ -65,6 +66,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^5.0.0",
     "mapbox-gl-styles": "^2.0.2",
+    "md-insert": "^1.0.1",
     "mini-css-extract-plugin": "^2.4.4",
     "mocha": "^9.1.3",
     "nanoassert": "^2.0.0",
