--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-style-spec": "^13.23.1",
-    "mapbox-to-css-font": "^2.4.1",
-    "webfont-matcher": "^1.1.0"
+    "mapbox-to-css-font": "^2.4.1"
   },
   "devDependencies": {
     "@types/arcgis-rest-api": "^10.4.4",
