--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "webpack serve --config ./webpack.config.examples.cjs",
     "prepare": "npm run doc && npm run build",
-    "build": "tsc --project tsconfig-build.json && webpack-cli --mode=production --config ./webpack.config.olms.cjs && webpack-cli --mode=production --config ./webpack.config.examples.cjs",
+    "build": "tsc --project tsconfig-build.json && rollup -c && esm=true rollup -c && webpack-cli --mode=production --config ./webpack.config.examples.cjs",
     "doc": "typedoc --plugin typedoc-plugin-markdown --plugin typedoc-plugin-missing-exports src/index.js --readme none --excludeExternals --internalNamespace 'types' --name API --hideBreadcrumbs --disableSources --tsconfig tsconfig-typecheck.json && npx concat-md docs --hide-anchor-links=false | npx md-insert README.md -i --region apidoc",
     "karma": "karma start test/karma.conf.cjs",
     "lint": "eslint test examples src",
@@ -40,6 +40,10 @@
     "mapbox-to-css-font": "^2.4.1"
   },
   "devDependencies": {
+    "@mapbox/flow-remove-types": "^2.0.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
     "@types/arcgis-rest-api": "^10.4.4",
     "@types/mocha": "^9.1.0",
     "@types/offscreencanvas": "^2019.6.4",
@@ -71,6 +75,9 @@
     "ol": "^6.14.1",
     "puppeteer": "^13.0.0",
     "remove-flow-types-loader": "^1.1.0",
+    "rollup": "^2.70.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-unassert": "^0.3.0",
     "should": "^13.2.3",
     "sinon": "^13.0.0",
     "style-loader": "^3.3.1",
