--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "mini-css-extract-plugin": "^2.4.4",
     "mocha": "^9.1.3",
     "nanoassert": "^2.0.0",
-    "ol": "^6.14.1",
+    "ol": "^6.14.2-dev.1652464787949",
     "puppeteer": "^13.0.0",
     "remove-flow-types-loader": "^1.1.0",
     "rollup": "^2.70.2",
